[FIX] point_of_sale: ensure search bar visibility with category images
Before this commit, adding images to POS categories caused the search
bar to disappear.

This commit addresses the problem by fixing the layout issue that led
to the disappearance of the search bar. Now, even when POS categories
have images, the search bar remains visible and correctly positioned to
the right.

opw-3598922

closes odoo/odoo#142856

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -840,6 +840,7 @@ td {
 
 .pos .rightpane-header .breadcrumbs {
     display: flex;
+    align-items: center;
 }
 
 .pos .green-border-bottom {
@@ -3654,7 +3655,7 @@ td {
     align-items: center;
     padding: 0px 10px;
     background-color: #FFFFFF;
-    height: 48px;
+    height: 100%;
     font-size: 16px;
     transition: all linear 150ms;
 }
@@ -3707,6 +3708,7 @@ td {
     min-height: 48px;
     border-left: 1px $gray-100 solid;
     background-color: #FFFFFF;
+    position: sticky;
 }
 
 .pos .search-bar-container.sb-product .icon {
